--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "name": "typescript-homework-module-2",
   "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "web-dev-server --node-resolve --open --watch",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/marinka03/goit-typescript-hw-02.git"
+  },
   "description": "",
   "keywords": [],
   "author": "",
